# daily-ai-mini-projects

./: .gitignore  Fine_Tune_LLM.ipynb  README.md
a2a-agents/: .gitignore  README.md  orchestrator.py  pyproject.toml  test_groq.py
a2a-agents/agents/: __init__.py  research_agent.py  writer_agent.py
agent-eval-arena/: .env.example  .gitignore  README.md  leaderboard.md  main.py  pyproject.toml
agent-eval-arena/data/: test_set.json
agent-eval-arena/src/: agent.py  config.py  evaluators.py  harness.py  leaderboard.py  main.py  tools.py
agent-memory-router/: main.py  pyproject.toml  router.py
agent-memory-router/backends/: graph.py  rag.py  tabular.py
ai-vani/: .env.example  ARCHITECTURE.md  CLAUDE.md  PHASES.md  PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_5.md  pyproject.toml
ai-vani/sip/: dispatch-rule.json  inbound-trunk.json
ai-vani/src/vani/: agent.py  config.py  db.py  prompts.py  tools.py
annual-report-ai/: main.py  pyproject.toml
annual-report-ai/src/: gemini_client.py  pdf_processor.py  query_engine.py  server.py
approval-gate-agent/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
approval-gate-agent/src/: audit.py  config.py  graph.py  main.py  nodes.py  prompts.py  state.py
chat-with-csv/backend/: main.py  pyproject.toml  rag.py
colpali-vision-rag/: .env.example  .gitignore  README.md  pyproject.toml
colpali-vision-rag/scripts/: make_sample_pdf.py
colpali-vision-rag/src/: answerer.py  config.py  embedder.py  graph.py  ingest.py  main.py  pdf_render.py  vector_store.py
computer-use-agent/: .gitignore  README.md  main.py  see_test.py  test_gemini.py  think_test.py
computer-use-agent/src/: __init__.py  actions.py  brain.py  config.py  graph.py  screen.py
desibot/: .env.example  AGENTS.md  CLAUDE.md  CONVENTIONS.md  COSTS.md  EXTRACTION_SCHEMA.md  TASKS.md
desibot/backend/: config.py  db.py  main.py  pyproject.toml  requirements.txt  setup.py
desibot/backend/models/: call.py
desibot/backend/routers/: calls.py  retell_llm.py  webhooks.py
desibot/backend/services/: extractor.py  retell_service.py  sarvam_service.py
github-mcp/: pyproject.toml  server.py
graphrag-project/: extract.py  graph_db.py  main.py  package-lock.json  pyproject.toml  rag.py
graphrag-project/documents/: ai_companies.txt  tech_products.txt
graphrag-project/frontend/: vite.config.js
hybrid-rag/: main.py  pyproject.toml
interview-coach/: .gitignore  README.md  build-interview-coach-guide.md  interview-coach-instagram-assets.md  pyproject.toml
interview-coach/src/: audio_io.py  camera.py  coach.py  config.py  display.py  session.py
langsmith-tutorial/: agent.py  evaluations.py  main.py  pyproject.toml  simple_llm_call.py
lightrag-project/: pyproject.toml
lightrag-project/data/: sample.txt
lightrag-project/src/: ingest.py  query.py  rag_engine.py  tokenizer.py
live-vision-agent/: .gitignore  README.md  pyproject.toml
live-vision-agent/src/: agent.py  audio_io.py  camera.py  config.py
lora-finetune-kaggle/: README.md
marketmind/: app.py  graph.py  pyproject.toml  state.py
marketmind/agents/: __init__.py  macro_agent.py  onchain_agent.py  price_agent.py  risk_agent.py  sentiment_agent.py  synthesis_agent.py
memory-agent/: pyproject.toml
memory-agent/src/: agent.py  config.py  main.py  memory.py
multimodal-agent/: app.py  pyproject.toml
multimodal-agent/agent/: agent.py  client.py  image.py  llm.py  prompt.py
offline-slm-agent/: .env.example  .gitignore  README.md  pyproject.toml
offline-slm-agent/src/: agent.py  config.py  main.py  tools.py
pageindex-rag/: main.py  pyproject.toml
pageindex-rag/data/: annual_report_2024.json  annual_report_2024_tree.json
pageindex-rag/src/: cli.py  ingest.py  (+1 more)
parallel-news-agent/: README.md  main.py  pyproject.toml  report.md
parallel-news-agent/src/: agents.py  graph.py  main.py  state.py
plan-and-execute-agent/: README.md  pyproject.toml
plan-and-execute-agent/src/: config.py  graph.py  main.py  nodes.py  prompts.py  react_agent.py  react_loop.py  state.py  tools.py
rag-eval/: collect_results.py  eval_results.json  evaluate.py  generate_testset.py  pyproject.toml  rag_outputs.json  rag_pipeline.py
rag-eval/data/: docs.txt
rag_anything_app/: .env.example  .gitignore  README.md  pyproject.toml
realtime-voice-translator/: .gitignore  pyproject.toml
realtime-voice-translator/src/: app.py  audio_processor.py  config.py  gemini_session.py
reflexion-self-correcting/: .gitignore  README.md  pyproject.toml
reflexion-self-correcting/src/: config.py  graph.py  main.py  nodes.py  plot.py  prompts.py  state.py
sarvam-chatbot/: chat_test.py  chatbot.py  pyproject.toml  verify.py
self-healing-code-agent/: .gitignore  README.md  pyproject.toml
self-healing-rag/: app.py  ingest.py  pyproject.toml  rag_agent.py
self-healing-rag/docs/: machine_learning.txt  python_basics.txt
smolagents-code-agent/: README.md  build-smolagents-code-agent-guide.md  pyproject.toml
supervisor-content-team/: .gitignore  pyproject.toml
telegram-bot/: bot.py  memory_engine.py  pyproject.toml
video-rag/: cli.py  config.py  ingest.py  pyproject.toml  query.py
vision-rag/: ingest.py  main.py  pyproject.toml  query.py  rag.py
visual-search/: pyproject.toml
visual-search/data/qdrant_db/: meta.json
visual-search/data/qdrant_db/collection/products/: storage.sqlite
visual-search/src/: embedder.py  indexer.py  prepare_data.py  search.py  store.py
voice-ai-agent/: .env.example  README.md  pyproject.toml
voice-ai-agent/scripts/: verify_presets.py
voice-ai-agent/src/: agent.py  pipeline_config.py
voice-support-bot/: agent.py  pyproject.toml  token_server.py
worldcup-analyst/: .env.example  README.md  build-worldcup-analyst-guide.md  pyproject.toml
worldcup-analyst/app/: __init__.py  config.py  graph.py  main.py  state.py
worldcup-analyst/app/agents/: __init__.py  llm.py  matchup.py  news.py  player.py  runner.py  supervisor.py  synthesizer.py  tools.py
worldcup-analyst/app/data/: __init__.py  client.py  models.py  news.py  results.py  sportsdb.py
(+26 files in other folders)
