[project]
name = "annual-report-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "google-genai==1.75.0",
    "pillow==12.1.1",
    "pymupdf==1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "uvicorn>=0.46.0",
]
