[project]
name = "hybrid-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "python-dotenv>=1.0.0",
    "google-genai>=1.74.0",
    "networkx>=3.6.1",
    "rich>=15.0.0",
    "sentence-transformers>=5.4.1",
]
