[project]
name = "interview-coach"
version = "0.1.0"
description = "Real-time AI interview coach powered by Gemini Live — watches your camera and listens to your answers, then coaches you live."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai==2.8.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]
