[project]
name = "plan-and-execute-agent"
version = "0.1.0"
description = "Plan-and-execute LangGraph agent (planner/executor/replanner) benchmarked against a plain ReAct agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
