[project]
name = "realtime-voice-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0",
    "numpy>=1.26",
    "python-dotenv>=1.2.2",
    "scipy>=1.13",
    "streamlit>=1.37",
    "streamlit-webrtc>=0.47",
]
