[project]
name = "reflexion-self-correcting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.5",
    "matplotlib>=3.9",
    "pydantic>=2.13",
    "python-dotenv>=1.2.2",
]
