[project]
name = "video-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "google-genai>=1.74.0",
    "opencv-python-headless>=4.13.0.92",
    "python-dotenv>=1.2.2",
    "yt-dlp>=2026.3.17",
]
