[project]
name = "vision-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "colpali-engine>=0.3.15",
    "google-genai>=1.75.0",
    "numpy>=2.4.4",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0,<5.4.0",
]
