[project]
name = "visual-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "fastapi>=0.136.1",
    "pillow>=12.2.0",
    "qdrant-client>=1.17.1",
    "torch>=2.11.0",
    "torchvision>=0.22.0",
    "transformers>=5.8.0",
    "uvicorn>=0.46.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
