[project]
name = "voice-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[deepgram,google,silero,turn-detector]>=1.5.14",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "livekit-plugins-sarvam>=1.5.14",
    "livekit-plugins-soniox>=1.5.14",
    "python-dotenv>=1.2.2",
    "torch>=2.12.0",
]
