[project]
name = "voice-support-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "livekit-agents[deepgram,groq,silero,turn-detector]~=1.4",
    "livekit-plugins-google~=1.4",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.44.0",
]
