[project]
name = "worldcup-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.5",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]
