[project]
name = "voicebot-demo-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.2",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.11.1",
    "pydantic-settings==2.13.1",
    "aiosqlite==0.22.1",
    "retell-sdk==5.23.0",
    "sarvamai>=0.1.27",
    "httpx==0.28.1",
    "python-dotenv==1.1.0",
]

[dependency-groups]
dev = []
